Bug 510329 - Merging collection fails to match isbn13 values
Summary: Merging collection fails to match isbn13 values
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.1.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-10-07 01:00 UTC by Robby Stephenson
Modified: 2025-10-07 01:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.1.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Stephenson 2025-10-07 01:00:35 UTC
ISBN codes in csv file were without dashes. Ex : 9791031902630.
Corresponding entry already in tellico database had code
979-1-03190-263-0. Entry added when importing csv file has code
979-10-319-0263-0.
Comment 1 Robby Stephenson 2025-10-07 01:02:52 UTC
Git commit 24201106bf59030bb7a45e79b5f985a0be8e2a01 by Robby Stephenson.
Committed on 07/10/2025 at 01:02.
Pushed by rstephenson into branch 'master'.

Use ISBN13 to match entry values rather than ISBN10

For 979 prefix, the ISBN10 check fails. Update unit test.
FIXED-IN: 4.1.4

M  +4    -0    ChangeLog
M  +2    -2    src/document.cpp
M  +1    -1    src/entrycomparison.cpp
M  +3    -3    src/tests/entrycomparisontest.cpp

https://invent.kde.org/office/tellico/-/commit/24201106bf59030bb7a45e79b5f985a0be8e2a01
Comment 2 Robby Stephenson 2025-10-07 01:03:11 UTC
Git commit 198b563439f5eb798dce828e08cb7c07089f243d by Robby Stephenson.
Committed on 07/10/2025 at 01:03.
Pushed by rstephenson into branch '4.1'.

Use ISBN13 to match entry values rather than ISBN10

For 979 prefix, the ISBN10 check fails. Update unit test.
FIXED-IN: 4.1.4

M  +4    -0    ChangeLog
M  +2    -2    src/document.cpp
M  +1    -1    src/entrycomparison.cpp
M  +3    -3    src/tests/entrycomparisontest.cpp

https://invent.kde.org/office/tellico/-/commit/198b563439f5eb798dce828e08cb7c07089f243d