Use ISBN13 to match entry values rather than ISBN10

For 979 prefix, the ISBN10 check fails. Update unit test.

BUG: 510329
FIXED-IN: 4.1.4